--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirstAssignment">
         <activity
-            android:name=".MainActivity"
+            android:name=".MenuActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity"
-            android:exported="false"/>
     </application>
 
 </manifest>
